Switch from Vector to List, various code formatting